third_party/move/move-compiler-v2/tests/lambda-lifting/pattern.lambda.exp
// -- Model dump before bytecode pipeline
module 0xcafe::m {
    struct S<T> {
        x: T,
    }
    private fun consume<T>(s: S<T>,x: T,f: |(S<T>, T)|T): T {
        (f)(s, x)
    }
    private fun pattern(s: S<u64>,x: u64): u64 {
        m::consume<u64>(s, x, closure#0m::pattern$lambda$1())
    }
    private fun pattern$lambda$1(param$0: S<u64>,_y: u64): u64 {
        {
          let m::S<u64>{ x } = param$0;
          {
            let y: u64 = x;
            Add<u64>(x, y)
          }
        }
    }
} // end 0xcafe::m

// -- Sourcified model before bytecode pipeline
module 0xcafe::m {
    struct S<T> {
        x: T,
    }
    fun consume<T>(s: S<T>, x: T, f: |(S<T>, T)|T): T {
        f(s, x)
    }
    fun pattern(s: S<u64>, x: u64): u64 {
        consume<u64>(s, x, |(arg0,arg1)| pattern$lambda$1(arg0, arg1))
    }
    fun pattern$lambda$1(param$0: S<u64>, _y: u64): u64 {
        let S<u64>{x: x} = param$0;
        let y = x;
        x + y
    }
}


Diagnostics:
error: Calls to function values other than inline function parameters not yet implemented
   ┌─ tests/lambda-lifting/pattern.move:10:9
   │
10 │         f(s, x)
   │         ^^^^^^^

error: Function-typed values not yet implemented except as parameters to calls to inline functions
   ┌─ tests/lambda-lifting/pattern.move:15:23
   │
15 │         consume(s, x, |S{x}, _y| { let y = x; x + y})
   │                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
